--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
   
 
   // Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --user -r requirements.txt && curl -sL https://civo.com/get | sh && sudo mv /tmp/civo /usr/local/bin/civo && curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash",
+	"postCreateCommand": "pip3 install --user -r requirements.txt && curl -sL https://civo.com/get | sh && sudo mv /tmp/civo /usr/local/bin/civo && curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash && curl -LO \"https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl\" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl",
 
   // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "jovyan"
